[project]
authors = [
  {name = "Alex Markessinis"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Python package that generates Wi-Fi QR Codes that can be scanned for easily connecting to Wi-Fi."
name = "WiFiQR-Gen"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.1"

[project.urls]
homepage = "https://github.com/MelonSmasher/WiFiQR-Gen"
issues = "https://github.com/MelonSmasher/WiFiQR-Gen/issues"
license = "https://raw.githubusercontent.com/MelonSmasher/WiFiQR-Gen/master/LICENSE"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "qrcode~=7.4.0", "Pillow"]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "src/WiFiQR-Gen/*.py"
]
artifacts = [
  "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/WiFiQR-Gen"
]