[project]
authors = [
  {name = "Alex Markessinis"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Python package that generates Wi-Fi QR Codes that can be scanned for easily connecting to Wi-Fi."
name = "WiFiQRGen"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"

[project.urls]
homepage = "https://github.com/MelonSmasher/WiFiQRGen"
issues = "https://github.com/MelonSmasher/WiFiQRGen/issues"
license = "https://raw.githubusercontent.com/MelonSmasher/WiFiQRGen/master/LICENSE"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "qrcode~=7.4.0", "Pillow"]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "src/WiFiQRGen/*.py"
]
artifacts = [
  "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/WiFiQRGen"
]